syntax = "proto3";

package authorization;
option go_package = "/authorization";

message FindIdRequest {
  string sid = 1;
}

message FindIdResponse {
  int64 value = 1;
}

message RoleRequest {
  int64 Id = 1;
}

message RoleResponse {
  string role = 1;
}

service Authorization {
  rpc GetId(FindIdRequest) returns (FindIdResponse) {}
  rpc GetRole(RoleRequest) returns (RoleResponse) {}
}